# loca

./: .gitignore  LICENSE  README.md  cli.py  pyproject.toml  requirements.txt
loca/: __init__.py  cache.py  chroma.py  cli.py  config.py  constants.py  core.py  main.py  progress.py  snippet.py  utils.py
